# ufpm

./: .gitattributes  .gitignore  Cargo.toml  README.md  cliff.toml  deny.toml  justfile
.github/workflows/: ci.yml  release.yml
src/: api.rs  cli.rs  commands.rs  constants.rs  foundry.rs  index.rs  install.rs  main.rs  manifest.rs  resolve.rs  ui.rs
src/api/: types.rs
src/commands/: cache.rs  doctor.rs  export.rs  import.rs  package.rs
src/foundry/: discovery.rs  local.rs  version.rs  worlds.rs
src/install/: download.rs  extract.rs
tests/fixtures/: index-module.json
