[package]
name = "ufpm"
edition = "2024"
version = "0.0.1"
license-file = "LICENSE.md"
readme = "README.md"
rust-version = "1.96.0"
publish = false
repository = "https://github.com/dealloc/ufpm"
authors = ["Wannes Gennar <info@dealloc.be>"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.rustdoc]
private_intra_doc_links = "allow"

[lints.clippy]
pedantic = "warn"
suspicious = "warn"
complexity = "warn"
missing_docs_in_private_items = "warn"
module_name_repetitions = "warn"
semicolon_if_nothing_returned = "warn"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.20"

# We create a separate profile called 'fast' that disables all optimisation in favour of faster compilation for use in CI.
[profile.fast]
inherits = "dev"
opt-level = 0
codegen-units = 256
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
incremental = true

[profile.fast.package."*"]
opt-level = 0
