[package]
name = "ufpm"
edition = "2024"
version = "0.0.1"
license-file = "LICENSE.md"
readme = "README.md"
rust-version = "1.96.0"
publish = false
repository = "https://github.com/dealloc/ufpm"
authors = ["Wannes Gennar <info@dealloc.be>"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.rustdoc]
private_intra_doc_links = "allow"

[lints.clippy]
pedantic = "warn"
suspicious = "warn"
complexity = "warn"
missing_docs_in_private_items = "warn"
module_name_repetitions = "warn"
semicolon_if_nothing_returned = "warn"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.12"
dirs = "6.0"
futures-util = { version = "0.3", default-features = false }
indicatif = "0.18"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["fs", "macros", "rt"] }
zip = { version = "4.3", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.20"
wiremock = "0.6"

# We create a separate profile called 'fast' that disables all optimisation in favour of faster compilation for use in CI.
[profile.fast]
inherits = "dev"
opt-level = 0
codegen-units = 256
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
incremental = true

[profile.fast.package."*"]
opt-level = 0
