[package]
name = "ufpm"
edition = "2024"
version = "0.1.0"
license-file = "LICENSE.md"
readme = "README.md"
rust-version = "1.96.0"
publish = false
repository = "https://github.com/dealloc/ufpm"
authors = ["Wannes Gennar <info@dealloc.be>"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.rustdoc]
private_intra_doc_links = "allow"

[lints.clippy]
pedantic = "warn"
suspicious = "warn"
complexity = "warn"
missing_docs_in_private_items = "warn"
module_name_repetitions = "warn"
semicolon_if_nothing_returned = "warn"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.5"
dialoguer = "0.12.0"
dirs = "6.0.0"
futures-util = { version = "0.3.32", default-features = false }
indicatif = "0.18.4"
reqwest = { version = "0.13.4", default-features = false, features = [
  "json",
  "rustls"
] }
rusty-leveldb = "4.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["raw_value"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "macros", "rt", "io-util"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
wiremock = "0.6.5"

# We create a separate profile called 'fast' that disables all optimisation in favour of faster compilation for use in CI.
[profile.fast]
inherits = "dev"
opt-level = 0
codegen-units = 256
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
incremental = true

[profile.fast.package."*"]
opt-level = 0
